tests/samples/negative/generics/generic_enum_invalid_payload_storage.ax
module generic_enum_invalid_payload_storage;

enum Bad<T>: u8 {
    value(void) = 1,
    none = 2,
}

fn main() -> i32 {
    let value: *mut Bad<i32> = null;
    return 0;
}
